deploy/kubernetes_resources/deploy_consumer copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qywx-consumer
  namespace: qywx
  labels:
    app: qywx-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: qywx-consumer
  template:
    metadata:
      labels:
        app: qywx-consumer
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      nodeSelector:
        pool: consumers
      tolerations:
        - key: pool
          operator: Equal
          value: consumers
          effect: NoSchedule
      containers:
        - name: qywx-consumer
          image: crpi-bhf5prt6r8uymetk.cn-shanghai.personal.cr.aliyuncs.com/ns-ipang-278845/consumer:release_20251027_01
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 11113
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "8"
              memory: "16Gi"
            limits:
              cpu: "10"
              memory: "20Gi"
