deploy/kubernetes_resources/deploy_producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qywx-producer
  namespace: qywx
  labels:
    app: qywx-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qywx-producer
  template:
    metadata:
      labels:
        app: qywx-producer
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      nodeSelector:
        pool: core
      tolerations:
        - key: pool
          operator: Equal
          value: core
          effect: NoSchedule
      containers:
        - name: qywx-producer
          image: crpi-bhf5prt6r8uymetk.cn-shanghai.personal.cr.aliyuncs.com/ns-ipang-278845/producer:release_20251027_01
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 11112
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "4"
              memory: "8Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
